#if 0
#if 0
#if 0 // configure - create config.mak and config.h
#if 0
#if 0 // written by 2005 NoisyB
#if 0
#if 0
cc configure.c -o config.status && ./config.status && exit 0
gcc configure.c -o config.status && ./config.status && exit 0
g++ configure.c -o config.status && ./config.status && exit 0
egcs configure.c -o config.status && ./config.status && exit 0
#endif
#endif
#endif
#endif
#endif
#endif
#endif


st_configure_in_t configure_in[] = {
  {
    {NULL},
    {NULL},
    {NULL},
#ifdef  __MSDOS__                               // __MSDOS__ must come before __unix__,
    "MSDOS=1\n",                                 //  because DJGPP defines both
#elif   defined __unix__
#ifdef  __CYGWIN__
    "CYGWIN=1\n",
#elif   defined __FreeBSD__
    "FREEBSD=1\n",
#elif   defined __OpenBSD__
    "OPENBSD=1\n",
#elif   defined __linux__
    "LINUX=1\n",
#elif   defined __solaris__
#ifdef __sparc__
    "SOLARIS_SPARC=1\n",
#else
    "SOLARIS_I386=1\n",
#endif
#else
    "GENERIC_UNIX=1\n",
#endif
#elif   defined _WIN32
#ifdef  __MINGW32__
    "MINGW=1\n",
#else
    "WIN32=1\n",
#endif
#elif   defined __APPLE__
#if   defined __POWERPC__ || defined __ppc__
    "APPLE_PPC=1\n",
#else
    "APPLE=1\n",
#endif
#elif   defined __BEOS__
    "BEOS=1\n",
#elif   defined AMIGA
#if defined __PPC__
    "AMIGA_PPC=1\n",
#else
    "AMIGA_68K=1\n",
#endif
#else
    "\n",
#endif
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"gcc", NULL},
    "CC=gcc\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"cc", NULL},
    "ifndef CC\nCC=cc\nendif\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"g++", NULL},
    "CPP=g++\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"gpp", NULL},
    "ifndef CPP\nCPP=gpp\nendif\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"gmake", NULL},
    NULL,
    NULL,
    "*** if make fails you may try gmake instead",
    NULL
  },
  {
    {NULL},
    {NULL},
    {"/usr/local/include", NULL},
    "includedir=/usr/local/include\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"/usr/include", NULL},
    "ifndef includedir\n"
    "includedir=/usr/include\n"
    "endif\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"/usr/local/lib", NULL},
    "libdir=/usr/local/lib\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"/usr/lib", NULL},
    "ifndef libdir\n"
    "libdir=/usr/lib\n"
    "endif\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"/usr/bin/install", NULL},
    "INSTALL=/usr/bin/install -c\n"
    "INSTALL_PROGRAM=${INSTALL}\n"
    "INSTALL_DATA=${INSTALL} -m 644\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"install", NULL},
    "ifndef INSTALL\n"
    "INSTALL=install -c\n"
    "INSTALL_PROGRAM=${INSTALL}\n"
    "INSTALL_DATA=${INSTALL} -m 644\n"
    "endif\n",
    NULL,
    NULL,
    NULL
  },
#if 0
  {
    {NULL},
    {NULL},
    {NULL},
    NULL,
    "#define DEBUG\n",
    NULL,
    NULL
  },
#endif
  {
    {NULL},
    {NULL},
    {NULL},
    NULL,
    "#define USE_CRC16\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {NULL},
    NULL,
    "#define USE_CRC32\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {NULL},
    NULL,
    "#define USE_MD5\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {NULL},
    NULL,
    "#define USE_SHA1\n",
    NULL,
    NULL
  },
#if 1
  // enable dynamic loading of library
  {
    {NULL},
    {NULL},
    {NULL},
    "DLOPEN=1",
    "#define DLOPEN\n",
    NULL,
    NULL
  },
#endif
  {
    {NULL},
    {NULL},
    {NULL},
    NULL,
    "#define USE_ANSI_COLOR\n",
    "ANSI support......................   yes",
    "ANSI support......................   no"
  },
  {
    {NULL},
    {"inttypes.h", NULL},
    {NULL},
    NULL,
    "#define HAVE_INTTYPES_H 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"byteswap.h", NULL},
    {NULL},
    NULL,
    "#define HAVE_BYTESWAP_H 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"stdlib.h", NULL},
    {NULL},
    NULL,
    "#define HAVE_STDLIB_H 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"unistd.h", NULL},
    {NULL},
    NULL,
    "#define HAVE_UNISTD_H 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"dirent.h", NULL},
    {NULL},
    NULL,
    "#define HAVE_DIRENT_H 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"math.h", NULL},
    {NULL},
    "USE_MATH=1\n"
    "LDFLAGS+=-lm\n",
    "#define HAVE_MATH_H 1\n",
    NULL,
    NULL
  },
#if 0
  {
    {NULL},
    {"termcap.h", NULL},
    {NULL},
    "USE_TERMCAP=1\n"
    "LDFLAGS+=-ltermcap\n",
    "#define USE_TERMCAP 1\n",
    NULL,
    NULL
  },
#endif
#if 1
  {
    {NULL},
    {"zlib.h", NULL},
    {NULL},
    "USE_ZLIB=1\n"
    "LDFLAGS+=-lz\n",
    "#define USE_ZLIB 1\n",
    NULL,
    NULL
  },
#endif
  {
    {NULL},
    {"sys/io.h", NULL},
    {NULL},
    "HAVE_SYS_IO_H=1\n",
    "#define HAVE_SYS_IO_H 1\n",
    NULL,
    NULL
  },
#if 0
  {
    {NULL},
    {"arpa/inet.h", "netdb.h", "netinet/in.h", "sys/file.h", "sys/socket.h", NULL},
    {NULL},
    "USE_TCP=1\n",
    "#define USE_TCP 1\n",
    "Network support...................   yes",
    "Network support...................   no\n"
    "*** could not find sys/socket.h and probably other files required for\n"
    "*** network use. Please report this to the developerof this package"
  },
#endif
  {
    {NULL},
    {NULL},
    {NULL},
    "USE_PARALLEL=1\n",
    "#define USE_PARALLEL 1\n",
    "PAR port support..................   yes",
    "PAR port support..................   no"
  },
  {
    {"linux/ppdev.h", NULL},
    {NULL},
    {NULL},
    "USE_PPDEV=1\n",
    "#define USE_PPDEV 1\n",
    "ppdev (linux) support.............   yes",
    "ppdev (linux) support.............   no"
  },
#if 0
  {
    {NULL},
    {NULL},
    {NULL},
    "USE_SERIAL=1\n",
    "#define USE_SERIAL 1\n",
    "SERIAL port support...............   yes",
    "SERIAL port support...............   no"
  },
#endif
  {
    {"usb.h", NULL},
    {NULL},
    {NULL},
    "USE_USB=1\n",
    "#define USE_USB 1\n",
    "USB port support..................   yes",
    "USB port support..................   no"
  },
  {
    {NULL},
    {NULL},
    {NULL},
    "USE_LIBCD64=1\n",
    "#define USE_LIBCD64 1\n",
    "libcd64 (static) support..........   yes",
    "libcd64 (static) support..........   no"
// libi386 is necessary under OpenBSD, but only if libcd64 isn't enabled. The
//  reason is that libcd64 already includes libi386.
//  LIBI386_MAKE="-li386"
  },
  {{NULL}, {NULL}, {NULL}, NULL, NULL, NULL, NULL}
};


const char *lib_dirs[] = {
#if     (defined __unix__ && !defined __MSDOS__) || defined __BEOS__ || \
        defined AMIGA || defined __APPLE__      // Mac OS X actually
// GNU/Linux, Solaris, FreeBSD, OpenBSD, Cygwin, BeOS, Amiga, Mac (OS X)
  "./",
  "/usr/lib/",
  "/usr/local/lib/",
#else // DJGPP, Win32
  "c:\\windows\\system\\",
  "d:\\windows\\system\\",
  "e:\\windows\\system\\",
  "f:\\windows\\system\\",
  "g:\\windows\\system\\",
  "h:\\windows\\system\\",
  "c:\\windows\\system32\\",
  "d:\\windows\\system32\\",
  "e:\\windows\\system32\\",
  "f:\\windows\\system32\\",
  "g:\\windows\\system32\\",
  "h:\\windows\\system32\\",
#endif
  NULL
};


const char *header_dirs[] = {
#if     (defined __unix__ && !defined __MSDOS__) || defined __BEOS__ || \
        defined AMIGA || defined __APPLE__      // Mac OS X actually
// GNU/Linux, Solaris, FreeBSD, OpenBSD, Cygwin, BeOS, Amiga, Mac (OS X)
  "./",
  "/usr/include/",
  "/usr/local/include/",
  "/usr/local/usr/local/include/",
#else // DJGPP, Win32
  "c:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "d:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "e:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "f:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "g:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "h:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "c:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
  "d:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
  "e:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
  "f:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
  "g:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
  "h:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
#endif
  NULL
};


const char *file_dirs[] = {
#if     (defined __unix__ && !defined __MSDOS__) || defined __BEOS__ || \
        defined AMIGA || defined __APPLE__      // Mac OS X actually
// GNU/Linux, Solaris, FreeBSD, OpenBSD, Cygwin, BeOS, Amiga, Mac (OS X)
  "",
  "./",
#else // DJGPP, Win32
  "c:\\",
  "d:\\",
  "e:\\",
  "f:\\",
  "g:\\",
  "h:\\",
#endif
  NULL
};
