# Process this file with autoconf to produce a configure script.
AC_INIT(flc, 1.4.0, ucon64-main@lists.sf.net)
AC_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CC(gcc egcs cc)
AC_PROG_GCC_TRADITIONAL

AC_MSG_CHECKING(whether debug output is enabled)
AC_ARG_ENABLE(debug,
              AC_HELP_STRING([--enable-debug],
                             [enable debug output (default: no)]),
              enable_debug=$enableval,
              enable_debug=no)
if test $enable_debug = yes; then
  AC_DEFINE(DEBUG,1,[enable debug output (default: no)])
fi
AC_MSG_RESULT($enable_debug)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

AC_OUTPUT(config.mak)
