#if 0
#if 0
#if 0 // configure - create config.mak and config.h
#if 0
#if 0 // written by 2005 NoisyB
#if 0
#if 0
cc configure.c -o config.status && ./config.status && exit 0
gcc configure.c -o config.status && ./config.status && exit 0
g++ configure.c -o config.status && ./config.status && exit 0
egcs configure.c -o config.status && ./config.status && exit 0
#endif
#endif
#endif
#endif
#endif
#endif
#endif


st_configure_in_t configure_in[] = {
  {
    {NULL},
    {NULL},
    {"gcc", NULL},
    "CC=gcc\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"cc", NULL},
    "ifndef CC\nCC=cc\nendif\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"g++", NULL},
    "CPP=g++\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"gpp", NULL},
    "ifndef CPP\nCPP=gpp\nendif\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"gmake", NULL},
    NULL,
    NULL,
    "*** if make fails you may try gmake instead",
    NULL
  },
  {
    {NULL},
    {NULL},
    {"/usr/local/include", NULL},
    "includedir=/usr/local/include\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"/usr/include", NULL},
    "ifndef includedir\n"
    "includedir=/usr/include\n"
    "endif\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"/usr/local/lib", NULL},
    "libdir=/usr/local/lib\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"/usr/lib", NULL},
    "ifndef libdir\n"
    "libdir=/usr/lib\n"
    "endif\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"/usr/bin/install", NULL},
    "INSTALL=/usr/bin/install -c\n"
    "INSTALL_PROGRAM=${INSTALL}\n"
    "INSTALL_DATA=${INSTALL} -m 644\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"install", NULL},
    "ifndef INSTALL\n"
    "INSTALL=install -c\n"
    "INSTALL_PROGRAM=${INSTALL}\n"
    "INSTALL_DATA=${INSTALL} -m 644\n"
    "endif\n",
    NULL,
    NULL,
    NULL
  },
#if 0
  {
    {NULL},
    {NULL},
    {NULL},
    NULL,
    "#define DEBUG\n",
    NULL,
    NULL
  },
#endif
#if 0
  {
    {NULL},
    {NULL},
    {NULL},
    NULL,
    "#define USE_ANSI_COLOR\n",
    "ANSI support......................   yes",
    "ANSI support......................   no"
  },
#endif
  {
    {NULL},
    {"inttypes.h", NULL},
    {NULL},
    NULL,
    "#define HAVE_INTTYPES_H 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"byteswap.h", NULL},
    {NULL},
    NULL,
    "#define HAVE_BYTESWAP_H 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"stdlib.h", NULL},
    {NULL},
    NULL,
    "#define HAVE_STDLIB_H 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"unistd.h", NULL},
    {NULL},
    NULL,
    "#define HAVE_UNISTD_H 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"dirent.h", NULL},
    {NULL},
    NULL,
    "#define HAVE_DIRENT_H 1\n",
    NULL,
    NULL
  },
#if 0
  {
    {NULL},
    {"math.h", NULL},
    {NULL},
    "USE_MATH=1\n"
    "LDFLAGS+=-lm\n",
    "#define HAVE_MATH_H 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"termcap.h", NULL},
    {NULL},
    "USE_TERMCAP=1\n"
    "LDFLAGS+=-ltermcap\n",
    "#define USE_TERMCAP 1\n",
    NULL,
    NULL
  },
#endif
  {{NULL}, {NULL}, {NULL}, NULL, NULL, NULL, NULL}
};


const char *lib_dirs[] = {
#if     (defined __unix__ && !defined __MSDOS__) || defined __BEOS__ || \
        defined AMIGA || defined __APPLE__      // Mac OS X actually
// GNU/Linux, Solaris, FreeBSD, OpenBSD, Cygwin, BeOS, Amiga, Mac (OS X)
  "./",
  "/usr/lib/",
  "/usr/local/lib/",
#else // DJGPP, Win32
  "c:\\windows\\system\\",
  "d:\\windows\\system\\",
  "e:\\windows\\system\\",
  "f:\\windows\\system\\",
  "g:\\windows\\system\\",
  "h:\\windows\\system\\",
  "c:\\windows\\system32\\",
  "d:\\windows\\system32\\",
  "e:\\windows\\system32\\",
  "f:\\windows\\system32\\",
  "g:\\windows\\system32\\",
  "h:\\windows\\system32\\",
#endif
  NULL
};


const char *header_dirs[] = {
#if     (defined __unix__ && !defined __MSDOS__) || defined __BEOS__ || \
        defined AMIGA || defined __APPLE__      // Mac OS X actually
// GNU/Linux, Solaris, FreeBSD, OpenBSD, Cygwin, BeOS, Amiga, Mac (OS X)
  "./",
  "/usr/include/",
  "/usr/local/include/",
  "/usr/local/usr/local/include/",
#else // DJGPP, Win32
  "c:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "d:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "e:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "f:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "g:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "h:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "c:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
  "d:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
  "e:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
  "f:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
  "g:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
  "h:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
#endif
  NULL
};


const char *file_dirs[] = {
#if     (defined __unix__ && !defined __MSDOS__) || defined __BEOS__ || \
        defined AMIGA || defined __APPLE__      // Mac OS X actually
// GNU/Linux, Solaris, FreeBSD, OpenBSD, Cygwin, BeOS, Amiga, Mac (OS X)
  "",
  "./",
#else // DJGPP, Win32
  "c:\\",
  "d:\\",
  "e:\\",
  "f:\\",
  "g:\\",
  "h:\\",
#endif
  NULL
};
